Very naive enumerator